--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <nav class="w-full max-w-5xl mx-auto p-6 flex justify-between items-center z-10">
         <div class="flex items-center gap-3 select-none">
             <i class="fa-brands fa-youtube text-3xl text-main"></i>
-            <h1 class="text-xl font-bold text-text hidden sm:block">yt_duration</h1>
+            <h1 class="text-xl font-bold text-text hidden sm:block">YouTube_Duration :)</h1>
         </div>
         
         <div class="flex items-center gap-4">
